Initial responsive grid
-added buttons and basic styling
-added card body
-fixed responsivity

--- a/src/custom/naming.scss
+++ b/src/custom/naming.scss
@@ -8,6 +8,7 @@ $_row_name:                 "shelf";
 $_text_name:                "text";
 $_font_name:                "font";
 $_title_name:               "title";
+$_subtitle_name:            "subtitle";
 
 // Responsivity
 $_extra_small_name:         "xs";
@@ -45,6 +46,10 @@ $_taint_name:               "taint";
 // General
 $_placeholder_name:         "placeholder";
 $_gradient_name:            "gradient";
+$_card_name:                "card";
+$_header_name:              "header";
+$_footer_name:              "footer";
+$_button_name:              "button";
 
 // Coloring
 $_primary_name:             "primary";
