--- a/src/reset.scss
+++ b/src/reset.scss
@@ -17,3 +17,14 @@ body {
 h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
+
+button,input[type=button] {
+    background: white;
+    border: none;
+    padding: 0;
+    margin: 0;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
