--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -23,6 +23,21 @@
 
 @import "card";
 
+// Sampling
+//##########################
+
+@import "sample";
+
+// Form
+//##########################
+
+@import "form";
+
+// Text
+//##########################
+
+@import "text";
+
 // Buttons
 //##########################
 
