--- a/src/reset.scss
+++ b/src/reset.scss
@@ -16,6 +16,7 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
     margin: 0;
+    width: 100%;
 }
 
 button,input[type=button] {
@@ -27,4 +28,8 @@ button,input[type=button] {
     &:hover {
         cursor: pointer;
     }
+}
+
+input {
+    border: none;
 }
