--- a/src/components/sample/index.scss
+++ b/src/components/sample/index.scss
@@ -1,6 +1,6 @@
 // Sample base
 .#{$_sample_name} {
-    background-color: lighten(get_raw("primary_color"), 70%);
+    background-color: lighten_color("primary_color", 70%);
 
     // Title
     &:before {
