--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -24,12 +24,13 @@ $bootstrap_variables: ();
     $bootstrap_variables: map-merge($bootstrap_variables, ($key:$value)) !global;
     
     // Return the actual value
-    @return get_var($key);
+    @return get_raw($key);
 }
 
 // Print to a context all the variables saved
 @mixin print_var {
     :root {
+        // Print the variables
         @each $key, $var in $bootstrap_variables {
             $is_map: map_to_gradient(get_raw($key));
             
