--- a/src/components/buttons/colors.scss
+++ b/src/components/buttons/colors.scss
@@ -7,7 +7,7 @@
      */
 
     &-#{$_primary_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("primary_color");
         @include taint("primary_color");
         
@@ -22,7 +22,7 @@
     }
 
     &-#{$_secondary_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("secondary_color");
         @include taint("secondary_color");
         
@@ -37,7 +37,7 @@
     }
 
     &-#{$_success_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("success_color");
         @include taint("success_color");
         
@@ -52,7 +52,7 @@
     }
 
     &-#{$_warning_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("warning_color");
         @include taint("warning_color");
         
@@ -67,7 +67,7 @@
     }
 
     &-#{$_danger_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("danger_color");
         @include taint("danger_color");
         
@@ -82,12 +82,12 @@
     }
 
     &-#{$_light_name} {
-        background: lighten_color("light_color", 50%);
+        background: get_var("light_color");
         @include taint("light_color");
         
         &:hover:not([disabled]) {
-            background: lighten_color("light_color", 20%);
-            box-shadow: 0px 0px 3px 1px lighten_color("light_color", 50%);
+            background: get_var("light_color");
+            box-shadow: 0px 0px 3px 1px get_var("light_color");
         }
 
         &:active:not([disabled]) {
@@ -96,7 +96,7 @@
     }
 
     &-#{$_dark_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("dark_color");
         @include taint("dark_color");
         
@@ -115,11 +115,12 @@
     */
 
     &-#{$_primary_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("primary_gradient_color");
         @include taint("primary_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("primary_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("primary_color");
         }
 
@@ -129,11 +130,12 @@
     }
 
     &-#{$_secondary_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("secondary_gradient_color");
         @include taint("secondary_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("secondary_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("secondary_color");
         }
 
@@ -143,11 +145,12 @@
     }
 
     &-#{$_success_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("success_gradient_color");
         @include taint("success_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("success_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("success_color");
         }
 
@@ -157,11 +160,12 @@
     }
 
     &-#{$_warning_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("warning_gradient_color");
         @include taint("warning_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("warning_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("warning_color");
         }
 
@@ -171,11 +175,12 @@
     }
 
     &-#{$_danger_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("danger_gradient_color");
         @include taint("danger_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("danger_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("danger_color");
         }
 
@@ -189,7 +194,8 @@
         @include taint("light_gradient_color");
         
         &:hover:not([disabled]) {
-            box-shadow: 0px 0px 3px 1px lighten_color("light_gradient_color", 10%);
+            background: lighten_color("light_gradient_color", 10%);
+            box-shadow: 0px 0px 3px 1px get_var("light_gradient_color");
         }
 
         &:active:not([disabled]) {
@@ -198,11 +204,12 @@
     }
 
     &-#{$_dark_name}-#{$_gradient_name} {
-        color: white;
+        color: get_var("light_color");
         background: get_var("dark_gradient_color");
         @include taint("dark_gradient_color");
         
         &:hover:not([disabled]) {
+            background: lighten_color("dark_gradient_color", 10%);
             box-shadow: 0px 0px 3px 1px get_var("dark_color");
         }
 
