--- a/src/components/buttons/line.scss
+++ b/src/components/buttons/line.scss
@@ -88,12 +88,13 @@
 
     &-#{$_light_name}-#{$_line_name} {
         background: none;
-        color: lighten_color("light_color", 50%);
-        border: solid 2px lighten_color("light_color", 50%);
+        color: get_var("light_color");
+        border: solid 2px get_var("light_color");
         
         &:hover:not([disabled]) {
-            background: lighten_color("light_color", 20%);
-            box-shadow: 0px 0px 3px 1px lighten_color("light_color", 50%);
+            color: get_var("dark_theme");
+            background: get_var("light_color");
+            box-shadow: 0px 0px 3px 1px get_var("light_color");
         }
 
         &:active:not([disabled]) {
