--- a/src/components/grid/column.scss
+++ b/src/components/grid/column.scss
@@ -6,11 +6,11 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    min-height: $__font_normal_size;
+    min-height: get_var("__font_normal_size");
 
     // Padding
     &:not(.#{$_padless_name}) {
-        padding: 12px;
+        padding: get_var("__padding_size");
     }
 }
 
@@ -27,24 +27,26 @@
     &-#{$_extra_small_name} {
         @include media_size();
     }
+
+    $column_count: get_raw("__column_count");
     
     //Calculate grid size based on screen size - small
     &-#{$_small_name} {
-        @include media_size($__column_count/2, $__column_count, $__column_count ,$__column_count, $__column_count);
+        @include media_size($column_count/2, $column_count, $column_count ,$column_count, $column_count);
     }
     
     //Calculate grid size based on screen size - medium
     &-#{$_medium_name} {
-        @include media_size($__column_count/4, $__column_count/2, $__column_count, $__column_count, $__column_count);
+        @include media_size($column_count/4, $column_count/2, $column_count, $column_count, $column_count);
     }
     
     //Calculate grid size based on screen size - large
     &-#{$_large_name} {
-        @include media_size($__column_count/8, $__column_count/4, $__column_count/2, $__column_count, $__column_count);
+        @include media_size($column_count/8, $column_count/4, $column_count/2, $column_count, $column_count);
     }
     
     //Calculate grid size based on screen size - extra large
     &-#{$_extra_large_name} {
-        @include media_size($__column_count/16, $__column_count/8, $__column_count/4, $__column_count/2, $__column_count);
+        @include media_size($column_count/16, $column_count/8, $column_count/4, $column_count/2, $column_count);
     }
 }
